# mcp-sigstore

./: .gitignore  README.md  pyproject.toml
src/mcp_sigstore/: __init__.py  server.py
